<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.srinivas.com.driverregistration.Pendding_ChallanActivity">

    <include
        layout="@layout/header_layout"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_footer"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/footer"
            android:scaleType="fitXY"
            android:gravity="center"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textSize="@dimen/margin_20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitle"
            android:textSize="@dimen/margin_20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_5dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_5dp"
            android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subleftitle"
            android:textSize="@dimen/margin_18dp"
            android:gravity="left"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_5dp"
            android:layout_weight="0.6"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_date"
                android:textSize="@dimen/margin_18dp"
                android:gravity="right"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_weight="0.4"/>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitle_notification"
            android:textSize="@dimen/margin_18dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_5dp"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_suloo"
            android:textSize="@dimen/margin_textsize_14dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_supargra"
            android:textSize="@dimen/margin_textsize_14dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:fontFamily="sans-serif"
            android:gravity="right"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_annexure"
            android:textSize="@dimen/margin_textsize_14dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_med"
            android:textSize="@dimen/margin_textsize_14dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_list"
            android:textSize="@dimen/margin_textsize_14dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driving_license"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aadhar_card"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driv_paaport_photos"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driv_address_proof"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lpg_gas"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="@dimen/margin_20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passport"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="@dimen/margin_20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pancard"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="@dimen/margin_20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_passbook"
                android:textSize="@dimen/margin_textsize_14dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="@dimen/margin_20dp"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
